fixed horizontal scrolling and added one more div life is good

--- a/main.css
+++ b/main.css
@@ -1,5 +1,13 @@
 /*https://lucide.dev/icons/*/
-
+/*Colors
+Black neutral-950 #0A0A0A
+Gray  neutral-500 #737373
+Gray  neutral-400 #A3A3A3
+Gray  neutral-200 #E5E5E5
+Red   red-600     #DC2626
+Red   red-500     #EF4444
+Red   red-900     #7F1D1D
+*/
 
 @font-face {
   font-family: 'ethnocentric';
@@ -90,5 +98,4 @@
   cursor: pointer;
   background: linear-gradient(135deg, #dc2626, #7f1d1d); /* approximate from-red-600 to-red-900 */
   border-radius: 0; /* adjust if needed */
-  margin-top: 0.25rem
 }
